<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    >

    <!-- Title -->
    <TextView
        android:id="@android:id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        tools:text="Open Media" />

    <!-- Pick file -->
    <Button
        android:id="@+id/fileBtn"
        style="@style/GlassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingVertical="14dp"
        android:elevation="8dp"
        android:drawablePadding="12dp"
        android:text="@string/action_pick_file_old"
        android:textAllCaps="false" />

    <!-- Open URL -->
    <Button
        android:id="@+id/urlBtn"
        style="@style/GlassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="8dp"
        android:paddingVertical="14dp"
        android:drawablePadding="12dp"
        android:text="@string/action_open_url"
        android:textAllCaps="false" />

    <!-- Open document -->
    <Button
        android:id="@+id/docBtn"
        style="@style/GlassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:elevation="8dp"
        android:drawablePadding="12dp"
        android:text="@string/action_open_doc"
        android:textAllCaps="false" />

</LinearLayout>
