<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".LicensesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/licensesMaterialToolbar"
        android:layout_width="match_parent"
        android:background="@drawable/background_img"
        android:elevation="4dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow"
        app:navigationIconTint="@color/white"
        app:title="About"
        app:titleCentered="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licensesMaterialToolbar">

        <!-- App Logo -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:src="@mipmap/mpv_launcher_icon"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints" />

        <!-- App Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MAX  Player"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <!-- Version -->
        <TextView
            android:id="@+id/txt_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Version 2.6"
            android:textAlignment="center"
            android:textColor="#AAAAAA"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="#333333"
            tools:ignore="MissingConstraints" />

        <!-- About Text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:padding="14dp"
            android:text="@string/about_player"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <!-- Powered by mpv -->
        <TextView
            android:id="@+id/txt_mpv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/powered_by_mpv_media_player"
            android:textAlignment="center"
            android:textColor="#FFD54F"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingVertical="8dp"
            android:paddingStart="18dp"
            android:text="@string/copyright_text"
            android:textColor="@color/accent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/inter_medium"
            android:paddingVertical="8dp"
            android:paddingStart="18dp"
            android:text="@string/thanks_not"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>